Configuraciones/sysconfig/iptables.save
# Generated by iptables-save v1.4.21 on Fri Feb 19 16:01:19 2016
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
:ALLOWIN - [0:0]
:ALLOWOUT - [0:0]
:DENYIN - [0:0]
:DENYOUT - [0:0]
:DSHIELD - [0:0]
:INVALID - [0:0]
:INVDROP - [0:0]
:LOCALINPUT - [0:0]
:LOCALOUTPUT - [0:0]
:LOGDROPIN - [0:0]
:LOGDROPOUT - [0:0]
:SPAMDROP - [0:0]
:SPAMEDROP - [0:0]
-A INPUT -i ens34 -j ACCEPT
-A INPUT -i ens33.2 -j ACCEPT
-A INPUT -i ens33 -j ACCEPT
-A INPUT -i ens32 -j ACCEPT
-A INPUT -s 200.93.192.148/32 -i ens32 -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -s 200.93.192.148/32 -i ens32 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -s 200.93.192.148/32 -i ens32 -p tcp -m tcp --sport 53 -j ACCEPT
-A INPUT -s 200.93.192.148/32 -i ens32 -p udp -m udp --sport 53 -j ACCEPT
-A INPUT -s 200.93.192.161/32 -i ens32 -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -s 200.93.192.161/32 -i ens32 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -s 200.93.192.161/32 -i ens32 -p tcp -m tcp --sport 53 -j ACCEPT
-A INPUT -s 200.93.192.161/32 -i ens32 -p udp -m udp --sport 53 -j ACCEPT
-A INPUT -i ens32 -j LOCALINPUT
-A INPUT -i lo -j ACCEPT
-A INPUT -i ens32 -p tcp -j INVALID
-A INPUT -i ens32 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i ens32 -p tcp -m conntrack --ctstate NEW -m tcp --dport 20 -j ACCEPT
-A INPUT -i ens32 -p tcp -m conntrack --ctstate NEW -m tcp --dport 21 -j ACCEPT
-A INPUT -i ens32 -p tcp -m conntrack --ctstate NEW -m tcp --dport 22 -j ACCEPT
-A INPUT -i ens32 -p tcp -m conntrack --ctstate NEW -m tcp --dport 25 -j ACCEPT
-A INPUT -i ens32 -p tcp -m conntrack --ctstate NEW -m tcp --dport 53 -j ACCEPT
-A INPUT -i ens32 -p tcp -m conntrack --ctstate NEW -m tcp --dport 80 -j ACCEPT
-A INPUT -i ens32 -p tcp -m conntrack --ctstate NEW -m tcp --dport 110 -j ACCEPT
-A INPUT -i ens32 -p tcp -m conntrack --ctstate NEW -m tcp --dport 143 -j ACCEPT
-A INPUT -i ens32 -p tcp -m conntrack --ctstate NEW -m tcp --dport 443 -j ACCEPT
-A INPUT -i ens32 -p tcp -m conntrack --ctstate NEW -m tcp --dport 465 -j ACCEPT
-A INPUT -i ens32 -p tcp -m conntrack --ctstate NEW -m tcp --dport 587 -j ACCEPT
-A INPUT -i ens32 -p tcp -m conntrack --ctstate NEW -m tcp --dport 993 -j ACCEPT
-A INPUT -i ens32 -p tcp -m conntrack --ctstate NEW -m tcp --dport 995 -j ACCEPT
-A INPUT -i ens32 -p tcp -m conntrack --ctstate NEW -m tcp --dport 1194 -j ACCEPT
-A INPUT -i ens32 -p tcp -m conntrack --ctstate NEW -m tcp --dport 2221:2223 -j ACCEPT
-A INPUT -i ens32 -p tcp -m conntrack --ctstate NEW -m tcp --dport 5938 -j ACCEPT
-A INPUT -i ens32 -p tcp -m conntrack --ctstate NEW -m tcp --dport 10000 -j ACCEPT
-A INPUT -i ens32 -p tcp -m conntrack --ctstate NEW -m tcp --dport 25267 -j ACCEPT
-A INPUT -i ens32 -p udp -m conntrack --ctstate NEW -m udp --dport 20 -j ACCEPT
-A INPUT -i ens32 -p udp -m conntrack --ctstate NEW -m udp --dport 21 -j ACCEPT
-A INPUT -i ens32 -p udp -m conntrack --ctstate NEW -m udp --dport 53 -j ACCEPT
-A INPUT -i ens32 -p icmp -m icmp --icmp-type 8 -m limit --limit 1/sec -j ACCEPT
-A INPUT -i ens32 -p icmp -m icmp --icmp-type 0 -m limit --limit 1/sec -j ACCEPT
-A INPUT -i ens32 -p icmp -m icmp --icmp-type 11 -j ACCEPT
-A INPUT -i ens32 -p icmp -m icmp --icmp-type 3 -j ACCEPT
-A INPUT -i ens32 -j LOGDROPIN
-A INPUT -i lo -j ACCEPT
-A INPUT -i ens32 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i ens34 -j ACCEPT
-A INPUT -j LOG
-A INPUT -j DROP
-A INPUT -s 127.0.0.1/32 -i ens32 -j DROP
-A INPUT -d 127.0.0.1/32 -i ens32 -j DROP
-A INPUT -s 192.168.0.0/16 -i ens32 -j DROP
-A INPUT -s 172.16.0.0/12 -i ens32 -j DROP
-A INPUT -s 10.0.0.0/8 -i ens32 -j DROP
-A INPUT -s 127.0.0.1/32 -j ACCEPT
-A INPUT -d 127.0.0.1/32 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -p udp -m udp --dport 1194 -j ACCEPT
-A INPUT -i tun+ -j ACCEPT
-A INPUT -i tap+ -j ACCEPT
-A INPUT -i ens33 -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -d 192.168.107.203/32 -i ens32 -p tcp -m tcp --dport 25 -m conntrack --ctstate NEW -j ACCEPT
-A FORWARD -d 192.168.107.203/32 -i ens32 -p udp -m udp --dport 25 -m conntrack --ctstate NEW -j ACCEPT
-A FORWARD -d 192.168.107.203/32 -i ens32 -p tcp -m tcp --dport 465 -m conntrack --ctstate NEW -j ACCEPT
-A FORWARD -d 192.168.107.203/32 -i ens32 -p udp -m udp --dport 465 -m conntrack --ctstate NEW -j ACCEPT
-A FORWARD -d 192.168.107.203/32 -i ens32 -p tcp -m tcp --dport 110 -m conntrack --ctstate NEW -j ACCEPT
-A FORWARD -d 192.168.107.203/32 -i ens32 -p udp -m udp --dport 110 -m conntrack --ctstate NEW -j ACCEPT
-A FORWARD -d 192.168.107.203/32 -i ens32 -p tcp -m tcp --dport 995 -m conntrack --ctstate NEW -j ACCEPT
-A FORWARD -d 192.168.107.203/32 -i ens32 -p udp -m udp --dport 995 -m conntrack --ctstate NEW -j ACCEPT
-A FORWARD -d 192.168.107.203/32 -i ens32 -p tcp -m tcp --dport 143 -m conntrack --ctstate NEW -j ACCEPT
-A FORWARD -d 192.168.107.203/32 -i ens32 -p udp -m udp --dport 143 -m conntrack --ctstate NEW -j ACCEPT
-A FORWARD -d 192.168.107.203/32 -i ens32 -p tcp -m tcp --dport 993 -m conntrack --ctstate NEW -j ACCEPT
-A FORWARD -d 192.168.107.203/32 -i ens32 -p udp -m udp --dport 993 -m conntrack --ctstate NEW -j ACCEPT
-A FORWARD -d 192.168.107.203/32 -i ens32 -p tcp -m tcp --dport 443 -m conntrack --ctstate NEW -j ACCEPT
-A FORWARD -d 192.168.107.203/32 -i ens32 -p udp -m udp --dport 443 -m conntrack --ctstate NEW -j ACCEPT
-A FORWARD -i ens32 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i ens32 -j LOGDROPIN
-A FORWARD -i ens34 -j ACCEPT
-A FORWARD -s 127.0.0.1/32 -i ens32 -j DROP
-A FORWARD -d 127.0.0.1/32 -i ens32 -j DROP
-A FORWARD -s 192.168.0.0/16 -i ens32 -j DROP
-A FORWARD -s 172.16.0.0/12 -i ens32 -j DROP
-A FORWARD -s 10.0.0.0/8 -i ens32 -j DROP
-A FORWARD -o ens32 -p tcp -m tcp --sport 137:139 -j DROP
-A FORWARD -o ens32 -p udp -m udp --sport 137:139 -j DROP
-A FORWARD -s 10.8.0.0/24 -i ens33 -j DROP
-A FORWARD -i tun+ -j ACCEPT
-A FORWARD -i tap+ -j ACCEPT
-A FORWARD -i ens33 -j ACCEPT
-A FORWARD -o ens32 -m state --state NEW -j ACCEPT
-A FORWARD -m state --state RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -o ens34 -j ACCEPT
-A OUTPUT -o ens33.2 -j ACCEPT
-A OUTPUT -o ens33 -j ACCEPT
-A OUTPUT -o ens32 -j ACCEPT
-A OUTPUT -d 200.93.192.148/32 -o ens32 -p tcp -m tcp --dport 53 -j ACCEPT
-A OUTPUT -d 200.93.192.148/32 -o ens32 -p udp -m udp --dport 53 -j ACCEPT
-A OUTPUT -d 200.93.192.148/32 -o ens32 -p tcp -m tcp --sport 53 -j ACCEPT
-A OUTPUT -d 200.93.192.148/32 -o ens32 -p udp -m udp --sport 53 -j ACCEPT
-A OUTPUT -d 200.93.192.161/32 -o ens32 -p tcp -m tcp --dport 53 -j ACCEPT
-A OUTPUT -d 200.93.192.161/32 -o ens32 -p udp -m udp --dport 53 -j ACCEPT
-A OUTPUT -d 200.93.192.161/32 -o ens32 -p tcp -m tcp --sport 53 -j ACCEPT
-A OUTPUT -d 200.93.192.161/32 -o ens32 -p udp -m udp --sport 53 -j ACCEPT
-A OUTPUT -o ens32 -j LOCALOUTPUT
-A OUTPUT -o ens32 -p tcp -m tcp --dport 53 -j ACCEPT
-A OUTPUT -o ens32 -p udp -m udp --dport 53 -j ACCEPT
-A OUTPUT -o ens32 -p tcp -m tcp --sport 53 -j ACCEPT
-A OUTPUT -o ens32 -p udp -m udp --sport 53 -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -o ens32 -p tcp -j INVALID
-A OUTPUT -o ens32 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -o ens32 -p tcp -m conntrack --ctstate NEW -m tcp --dport 20 -j ACCEPT
-A OUTPUT -o ens32 -p tcp -m conntrack --ctstate NEW -m tcp --dport 21 -j ACCEPT
-A OUTPUT -o ens32 -p tcp -m conntrack --ctstate NEW -m tcp --dport 22 -j ACCEPT
-A OUTPUT -o ens32 -p tcp -m conntrack --ctstate NEW -m tcp --dport 25 -j ACCEPT
-A OUTPUT -o ens32 -p tcp -m conntrack --ctstate NEW -m tcp --dport 53 -j ACCEPT
-A OUTPUT -o ens32 -p tcp -m conntrack --ctstate NEW -m tcp --dport 80 -j ACCEPT
-A OUTPUT -o ens32 -p tcp -m conntrack --ctstate NEW -m tcp --dport 110 -j ACCEPT
-A OUTPUT -o ens32 -p tcp -m conntrack --ctstate NEW -m tcp --dport 113 -j ACCEPT
-A OUTPUT -o ens32 -p tcp -m conntrack --ctstate NEW -m tcp --dport 443 -j ACCEPT
-A OUTPUT -o ens32 -p tcp -m conntrack --ctstate NEW -m tcp --dport 587 -j ACCEPT
-A OUTPUT -o ens32 -p tcp -m conntrack --ctstate NEW -m tcp --dport 993 -j ACCEPT
-A OUTPUT -o ens32 -p tcp -m conntrack --ctstate NEW -m tcp --dport 995 -j ACCEPT
-A OUTPUT -o ens32 -p tcp -m conntrack --ctstate NEW -m tcp --dport 1194 -j ACCEPT
-A OUTPUT -o ens32 -p udp -m conntrack --ctstate NEW -m udp --dport 20 -j ACCEPT
-A OUTPUT -o ens32 -p udp -m conntrack --ctstate NEW -m udp --dport 21 -j ACCEPT
-A OUTPUT -o ens32 -p udp -m conntrack --ctstate NEW -m udp --dport 53 -j ACCEPT
-A OUTPUT -o ens32 -p udp -m conntrack --ctstate NEW -m udp --dport 113 -j ACCEPT
-A OUTPUT -o ens32 -p udp -m conntrack --ctstate NEW -m udp --dport 123 -j ACCEPT
-A OUTPUT -o ens32 -p icmp -m icmp --icmp-type 0 -j ACCEPT
-A OUTPUT -o ens32 -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A OUTPUT -o ens32 -p icmp -m icmp --icmp-type 11 -j ACCEPT
-A OUTPUT -o ens32 -p icmp -m icmp --icmp-type 3 -j ACCEPT
-A OUTPUT -o ens32 -j LOGDROPOUT
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -o ens34 -j ACCEPT
-A OUTPUT -o ens32 -p tcp -m tcp --sport 137:139 -j DROP
-A OUTPUT -o ens32 -p udp -m udp --sport 137:139 -j DROP
-A OUTPUT -o ens32 -m state --state NEW -j ACCEPT
-A DENYIN -s 192.168.122.1/32 -i ens32 -j DROP
-A DENYIN -s 190.154.158.178/32 -i ens32 -j DROP
-A DENYIN -s 185.130.5.200/32 -i ens32 -j DROP
-A DENYIN -s 113.195.145.70/32 -i ens32 -j DROP
-A DENYIN -s 176.121.5.146/32 -i ens32 -j DROP
-A DENYIN -s 59.45.79.36/32 -i ens32 -j DROP
-A DENYOUT -d 192.168.122.1/32 -o ens32 -j LOGDROPOUT
-A DENYOUT -d 190.154.158.178/32 -o ens32 -j LOGDROPOUT
-A DENYOUT -d 185.130.5.200/32 -o ens32 -j LOGDROPOUT
-A DENYOUT -d 113.195.145.70/32 -o ens32 -j LOGDROPOUT
-A DENYOUT -d 176.121.5.146/32 -o ens32 -j LOGDROPOUT
-A DENYOUT -d 59.45.79.36/32 -o ens32 -j LOGDROPOUT
-A DSHIELD -s 121.201.27.0/24 -j DROP
-A DSHIELD -s 66.240.192.0/24 -j DROP
-A DSHIELD -s 66.240.236.0/24 -j DROP
-A DSHIELD -s 185.130.5.0/24 -j DROP
-A DSHIELD -s 89.163.140.0/24 -j DROP
-A DSHIELD -s 71.6.165.0/24 -j DROP
-A DSHIELD -s 218.60.5.0/24 -j DROP
-A DSHIELD -s 64.125.239.0/24 -j DROP
-A DSHIELD -s 185.94.111.0/24 -j DROP
-A DSHIELD -s 59.45.79.0/24 -j DROP
-A DSHIELD -s 104.156.227.0/24 -j DROP
-A DSHIELD -s 107.150.35.0/24 -j DROP
-A DSHIELD -s 104.155.43.0/24 -j DROP
-A DSHIELD -s 183.60.48.0/24 -j DROP
-A DSHIELD -s 5.10.237.0/24 -j DROP
-A DSHIELD -s 40.112.149.0/24 -j DROP
-A DSHIELD -s 85.17.28.0/24 -j DROP
-A DSHIELD -s 188.138.118.0/24 -j DROP
-A DSHIELD -s 115.239.228.0/24 -j DROP
-A DSHIELD -s 222.186.34.0/24 -j DROP
-A INVALID -m conntrack --ctstate INVALID -j INVDROP
-A INVALID -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG NONE -j INVDROP
-A INVALID -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,SYN,RST,PSH,ACK,URG -j INVDROP
-A INVALID -p tcp -m tcp --tcp-flags FIN,SYN FIN,SYN -j INVDROP
-A INVALID -p tcp -m tcp --tcp-flags SYN,RST SYN,RST -j INVDROP
-A INVALID -p tcp -m tcp --tcp-flags FIN,RST FIN,RST -j INVDROP
-A INVALID -p tcp -m tcp --tcp-flags FIN,ACK FIN -j INVDROP
-A INVALID -p tcp -m tcp --tcp-flags PSH,ACK PSH -j INVDROP
-A INVALID -p tcp -m tcp --tcp-flags ACK,URG URG -j INVDROP
-A INVALID -p tcp -m tcp ! --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -j INVDROP
-A INVDROP -j DROP
-A LOCALINPUT -i ens32 -j ALLOWIN
-A LOCALINPUT -i ens32 -j DENYIN
-A LOCALINPUT -i ens32 -j SPAMEDROP
-A LOCALINPUT -i ens32 -j DSHIELD
-A LOCALINPUT -i ens32 -j SPAMDROP
-A LOCALOUTPUT -o ens32 -j ALLOWOUT
-A LOCALOUTPUT -o ens32 -j DENYOUT
-A LOGDROPIN -p tcp -m tcp --dport 67 -j DROP
-A LOGDROPIN -p udp -m udp --dport 67 -j DROP
-A LOGDROPIN -p tcp -m tcp --dport 68 -j DROP
-A LOGDROPIN -p udp -m udp --dport 68 -j DROP
-A LOGDROPIN -p tcp -m tcp --dport 111 -j DROP
-A LOGDROPIN -p udp -m udp --dport 111 -j DROP
-A LOGDROPIN -p tcp -m tcp --dport 113 -j DROP
-A LOGDROPIN -p udp -m udp --dport 113 -j DROP
-A LOGDROPIN -p tcp -m tcp --dport 135:139 -j DROP
-A LOGDROPIN -p udp -m udp --dport 135:139 -j DROP
-A LOGDROPIN -p tcp -m tcp --dport 445 -j DROP
-A LOGDROPIN -p udp -m udp --dport 445 -j DROP
-A LOGDROPIN -p tcp -m tcp --dport 500 -j DROP
-A LOGDROPIN -p udp -m udp --dport 500 -j DROP
-A LOGDROPIN -p tcp -m tcp --dport 513 -j DROP
-A LOGDROPIN -p udp -m udp --dport 513 -j DROP
-A LOGDROPIN -p tcp -m tcp --dport 520 -j DROP
-A LOGDROPIN -p udp -m udp --dport 520 -j DROP
-A LOGDROPIN -p tcp -m limit --limit 30/min -j LOG --log-prefix "Firewall: *TCP_IN Blocked* "
-A LOGDROPIN -p udp -m limit --limit 30/min -j LOG --log-prefix "Firewall: *UDP_IN Blocked* "
-A LOGDROPIN -p icmp -m limit --limit 30/min -j LOG --log-prefix "Firewall: *ICMP_IN Blocked* "
-A LOGDROPIN -j DROP
-A LOGDROPOUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m limit --limit 30/min -j LOG --log-prefix "Firewall: *TCP_OUT Blocked* " --log-uid
-A LOGDROPOUT -p udp -m limit --limit 30/min -j LOG --log-prefix "Firewall: *UDP_OUT Blocked* " --log-uid
-A LOGDROPOUT -p icmp -m limit --limit 30/min -j LOG --log-prefix "Firewall: *ICMP_OUT Blocked* " --log-uid
-A LOGDROPOUT -j DROP
-A SPAMDROP -s 1.4.0.0/17 -j DROP
-A SPAMDROP -s 1.10.16.0/20 -j DROP
-A SPAMDROP -s 1.32.128.0/18 -j DROP
-A SPAMDROP -s 1.116.0.0/14 -j DROP
-A SPAMDROP -s 5.8.37.0/24 -j DROP
-A SPAMDROP -s 5.34.242.0/23 -j DROP
-A SPAMDROP -s 5.101.218.0/24 -j DROP
-A SPAMDROP -s 5.101.221.0/24 -j DROP
-A SPAMDROP -s 5.134.128.0/19 -j DROP
-A SPAMDROP -s 14.4.0.0/14 -j DROP
-A SPAMDROP -s 14.245.0.0/16 -j DROP
-A SPAMDROP -s 23.235.48.0/20 -j DROP
-A SPAMDROP -s 23.251.224.0/19 -j DROP
-A SPAMDROP -s 24.233.0.0/19 -j DROP
-A SPAMDROP -s 27.111.48.0/20 -j DROP
-A SPAMDROP -s 27.122.32.0/20 -j DROP
-A SPAMDROP -s 27.126.160.0/20 -j DROP
-A SPAMDROP -s 31.11.43.0/24 -j DROP
-A SPAMDROP -s 31.184.238.0/24 -j DROP
-A SPAMDROP -s 31.222.200.0/21 -j DROP
-A SPAMDROP -s 36.0.8.0/21 -j DROP
-A SPAMDROP -s 36.37.48.0/20 -j DROP
-A SPAMDROP -s 37.18.42.0/24 -j DROP
-A SPAMDROP -s 37.139.49.0/24 -j DROP
-A SPAMDROP -s 37.148.216.0/21 -j DROP
-A SPAMDROP -s 37.230.212.0/23 -j DROP
-A SPAMDROP -s 37.246.0.0/16 -j DROP
-A SPAMDROP -s 41.72.64.0/19 -j DROP
-A SPAMDROP -s 42.0.32.0/19 -j DROP
-A SPAMDROP -s 42.1.56.0/22 -j DROP
-A SPAMDROP -s 42.1.128.0/17 -j DROP
-A SPAMDROP -s 42.52.0.0/14 -j DROP
-A SPAMDROP -s 42.83.80.0/22 -j DROP
-A SPAMDROP -s 42.96.0.0/18 -j DROP
-A SPAMDROP -s 42.123.36.0/22 -j DROP
-A SPAMDROP -s 42.128.0.0/12 -j DROP
-A SPAMDROP -s 42.160.0.0/12 -j DROP
-A SPAMDROP -s 42.194.8.0/22 -j DROP
-A SPAMDROP -s 42.194.12.0/22 -j DROP
-A SPAMDROP -s 42.194.128.0/17 -j DROP
-A SPAMDROP -s 42.208.0.0/12 -j DROP
-A SPAMDROP -s 43.229.52.0/22 -j DROP
-A SPAMDROP -s 43.236.0.0/16 -j DROP
-A SPAMDROP -s 43.239.108.0/22 -j DROP
-A SPAMDROP -s 43.250.64.0/22 -j DROP
-A SPAMDROP -s 43.250.116.0/22 -j DROP
-A SPAMDROP -s 43.252.80.0/22 -j DROP
-A SPAMDROP -s 43.252.152.0/22 -j DROP
-A SPAMDROP -s 43.252.180.0/22 -j DROP
-A SPAMDROP -s 43.255.188.0/22 -j DROP
-A SPAMDROP -s 45.64.88.0/22 -j DROP
-A SPAMDROP -s 45.117.208.0/22 -j DROP
-A SPAMDROP -s 45.119.164.0/22 -j DROP
-A SPAMDROP -s 45.119.208.0/22 -j DROP
-A SPAMDROP -s 45.121.144.0/22 -j DROP
-A SPAMDROP -s 45.121.204.0/22 -j DROP
-A SPAMDROP -s 46.29.248.0/22 -j DROP
-A SPAMDROP -s 46.29.248.0/21 -j DROP
-A SPAMDROP -s 46.148.112.0/20 -j DROP
-A SPAMDROP -s 46.151.48.0/21 -j DROP
-A SPAMDROP -s 46.232.192.0/21 -j DROP
-A SPAMDROP -s 46.243.140.0/24 -j DROP
-A SPAMDROP -s 46.243.142.0/24 -j DROP
-A SPAMDROP -s 46.243.173.0/24 -j DROP
-A SPAMDROP -s 49.8.0.0/14 -j DROP
-A SPAMDROP -s 49.128.104.0/22 -j DROP
-A SPAMDROP -s 49.238.64.0/18 -j DROP
-A SPAMDROP -s 58.87.64.0/18 -j DROP
-A SPAMDROP -s 59.254.0.0/15 -j DROP
-A SPAMDROP -s 60.233.0.0/16 -j DROP
-A SPAMDROP -s 61.11.224.0/19 -j DROP
-A SPAMDROP -s 61.13.128.0/17 -j DROP
-A SPAMDROP -s 61.45.251.0/24 -j DROP
-A SPAMDROP -s 63.141.32.0/19 -j DROP
-A SPAMDROP -s 66.231.64.0/20 -j DROP
-A SPAMDROP -s 67.213.128.0/20 -j DROP
-A SPAMDROP -s 67.218.208.0/20 -j DROP
-A SPAMDROP -s 67.219.208.0/20 -j DROP
-A SPAMDROP -s 67.220.224.0/19 -j DROP
-A SPAMDROP -s 69.169.224.0/20 -j DROP
-A SPAMDROP -s 72.13.16.0/20 -j DROP
-A SPAMDROP -s 78.31.184.0/21 -j DROP
-A SPAMDROP -s 78.31.211.0/24 -j DROP
-A SPAMDROP -s 79.110.17.0/24 -j DROP
-A SPAMDROP -s 79.110.18.0/24 -j DROP
-A SPAMDROP -s 79.110.19.0/24 -j DROP
-A SPAMDROP -s 79.110.25.0/24 -j DROP
-A SPAMDROP -s 79.173.104.0/21 -j DROP
-A SPAMDROP -s 80.76.8.0/21 -j DROP
-A SPAMDROP -s 81.22.152.0/23 -j DROP
-A SPAMDROP -s 83.175.0.0/18 -j DROP
-A SPAMDROP -s 85.121.39.0/24 -j DROP
-A SPAMDROP -s 86.55.40.0/23 -j DROP
-A SPAMDROP -s 86.55.42.0/23 -j DROP
-A SPAMDROP -s 88.135.16.0/20 -j DROP
-A SPAMDROP -s 91.194.254.0/23 -j DROP
-A SPAMDROP -s 91.195.254.0/23 -j DROP
-A SPAMDROP -s 91.198.127.0/24 -j DROP
-A SPAMDROP -s 91.200.12.0/24 -j DROP
-A SPAMDROP -s 91.200.248.0/22 -j DROP
-A SPAMDROP -s 91.203.20.0/22 -j DROP
-A SPAMDROP -s 91.207.4.0/22 -j DROP
-A SPAMDROP -s 91.209.12.0/24 -j DROP
-A SPAMDROP -s 91.212.104.0/24 -j DROP
-A SPAMDROP -s 91.212.201.0/24 -j DROP
-A SPAMDROP -s 91.212.220.0/24 -j DROP
-A SPAMDROP -s 91.213.126.0/24 -j DROP
-A SPAMDROP -s 91.213.172.0/24 -j DROP
-A SPAMDROP -s 91.215.136.0/23 -j DROP
-A SPAMDROP -s 91.216.3.0/24 -j DROP
-A SPAMDROP -s 91.217.10.0/23 -j DROP
-A SPAMDROP -s 91.220.35.0/24 -j DROP
-A SPAMDROP -s 91.220.62.0/24 -j DROP
-A SPAMDROP -s 91.220.163.0/24 -j DROP
-A SPAMDROP -s 91.223.89.0/24 -j DROP
-A SPAMDROP -s 91.226.97.0/24 -j DROP
-A SPAMDROP -s 91.229.210.0/24 -j DROP
-A SPAMDROP -s 91.230.110.0/24 -j DROP
-A SPAMDROP -s 91.230.252.0/23 -j DROP
-A SPAMDROP -s 91.234.36.0/24 -j DROP
-A SPAMDROP -s 91.235.2.0/24 -j DROP
-A SPAMDROP -s 91.236.74.0/23 -j DROP
-A SPAMDROP -s 91.236.120.0/24 -j DROP
-A SPAMDROP -s 91.236.213.0/24 -j DROP
-A SPAMDROP -s 91.237.198.0/24 -j DROP
-A SPAMDROP -s 91.238.82.0/24 -j DROP
-A SPAMDROP -s 91.239.24.0/24 -j DROP
-A SPAMDROP -s 91.239.238.0/24 -j DROP
-A SPAMDROP -s 91.240.163.0/24 -j DROP
-A SPAMDROP -s 91.240.165.0/24 -j DROP
-A SPAMDROP -s 91.242.217.0/24 -j DROP
-A SPAMDROP -s 91.243.115.0/24 -j DROP
-A SPAMDROP -s 92.63.87.0/24 -j DROP
-A SPAMDROP -s 93.113.158.0/24 -j DROP
-A SPAMDROP -s 93.179.89.0/24 -j DROP
-A SPAMDROP -s 93.179.90.0/24 -j DROP
-A SPAMDROP -s 93.179.91.0/24 -j DROP
-A SPAMDROP -s 94.26.112.0/20 -j DROP
-A SPAMDROP -s 94.154.128.0/18 -j DROP
-A SPAMDROP -s 95.216.0.0/15 -j DROP
-A SPAMDROP -s 101.192.0.0/14 -j DROP
-A SPAMDROP -s 101.199.0.0/16 -j DROP
-A SPAMDROP -s 101.202.0.0/16 -j DROP
-A SPAMDROP -s 101.203.128.0/19 -j DROP
-A SPAMDROP -s 101.248.0.0/15 -j DROP
-A SPAMDROP -s 101.252.0.0/15 -j DROP
-A SPAMDROP -s 103.2.44.0/22 -j DROP
-A SPAMDROP -s 103.10.68.0/22 -j DROP
-A SPAMDROP -s 103.12.216.0/22 -j DROP
-A SPAMDROP -s 103.16.76.0/24 -j DROP
-A SPAMDROP -s 103.18.228.0/22 -j DROP
-A SPAMDROP -s 103.20.36.0/22 -j DROP
-A SPAMDROP -s 103.23.8.0/22 -j DROP
-A SPAMDROP -s 103.36.64.0/22 -j DROP
-A SPAMDROP -s 103.41.180.0/22 -j DROP
-A SPAMDROP -s 103.42.115.0/24 -j DROP
-A SPAMDROP -s 103.49.248.0/22 -j DROP
-A SPAMDROP -s 103.55.28.0/22 -j DROP
-A SPAMDROP -s 103.57.248.0/22 -j DROP
-A SPAMDROP -s 103.60.12.0/22 -j DROP
-A SPAMDROP -s 103.61.4.0/22 -j DROP
-A SPAMDROP -s 103.195.192.0/22 -j DROP
-A SPAMDROP -s 103.228.60.0/22 -j DROP
-A SPAMDROP -s 103.229.36.0/22 -j DROP
-A SPAMDROP -s 103.230.144.0/22 -j DROP
-A SPAMDROP -s 103.231.84.0/22 -j DROP
-A SPAMDROP -s 103.232.136.0/22 -j DROP
-A SPAMDROP -s 103.232.172.0/22 -j DROP
-A SPAMDROP -s 103.236.32.0/22 -j DROP
-A SPAMDROP -s 103.242.184.0/22 -j DROP
-A SPAMDROP -s 104.143.112.0/20 -j DROP
-A SPAMDROP -s 104.153.112.0/21 -j DROP
-A SPAMDROP -s 104.160.224.0/19 -j DROP
-A SPAMDROP -s 104.192.0.0/22 -j DROP
-A SPAMDROP -s 104.218.224.0/22 -j DROP
-A SPAMDROP -s 104.219.88.0/21 -j DROP
-A SPAMDROP -s 104.219.232.0/21 -j DROP
-A SPAMDROP -s 104.244.88.0/21 -j DROP
-A SPAMDROP -s 104.245.40.0/21 -j DROP
-A SPAMDROP -s 104.245.248.0/21 -j DROP
-A SPAMDROP -s 104.255.56.0/21 -j DROP
-A SPAMDROP -s 104.255.136.0/21 -j DROP
-A SPAMDROP -s 106.96.0.0/14 -j DROP
-A SPAMDROP -s 108.166.224.0/19 -j DROP
-A SPAMDROP -s 114.8.0.0/16 -j DROP
-A SPAMDROP -s 115.127.224.0/19 -j DROP
-A SPAMDROP -s 116.78.0.0/15 -j DROP
-A SPAMDROP -s 116.119.0.0/17 -j DROP
-A SPAMDROP -s 116.128.0.0/10 -j DROP
-A SPAMDROP -s 116.144.0.0/15 -j DROP
-A SPAMDROP -s 116.146.0.0/15 -j DROP
-A SPAMDROP -s 117.58.0.0/17 -j DROP
-A SPAMDROP -s 117.100.0.0/15 -j DROP
-A SPAMDROP -s 118.177.0.0/16 -j DROP
-A SPAMDROP -s 118.185.0.0/16 -j DROP
-A SPAMDROP -s 119.3.0.0/16 -j DROP
-A SPAMDROP -s 119.58.0.0/16 -j DROP
-A SPAMDROP -s 119.232.0.0/16 -j DROP
-A SPAMDROP -s 120.48.0.0/15 -j DROP
-A SPAMDROP -s 121.100.128.0/18 -j DROP
-A SPAMDROP -s 122.129.0.0/18 -j DROP
-A SPAMDROP -s 123.136.80.0/20 -j DROP
-A SPAMDROP -s 124.68.0.0/15 -j DROP
-A SPAMDROP -s 124.70.0.0/15 -j DROP
-A SPAMDROP -s 124.157.0.0/18 -j DROP
-A SPAMDROP -s 124.242.0.0/16 -j DROP
-A SPAMDROP -s 124.245.0.0/16 -j DROP
-A SPAMDROP -s 125.31.192.0/18 -j DROP
-A SPAMDROP -s 125.58.0.0/18 -j DROP
-A SPAMDROP -s 125.169.0.0/16 -j DROP
-A SPAMDROP -s 128.13.0.0/16 -j DROP
-A SPAMDROP -s 128.168.0.0/16 -j DROP
-A SPAMDROP -s 128.191.0.0/16 -j DROP
-A SPAMDROP -s 129.47.0.0/16 -j DROP
-A SPAMDROP -s 129.76.64.0/18 -j DROP
-A SPAMDROP -s 130.148.0.0/16 -j DROP
-A SPAMDROP -s 130.196.0.0/16 -j DROP
-A SPAMDROP -s 130.201.0.0/16 -j DROP
-A SPAMDROP -s 130.222.0.0/16 -j DROP
-A SPAMDROP -s 131.100.148.0/22 -j DROP
-A SPAMDROP -s 132.145.0.0/16 -j DROP
-A SPAMDROP -s 132.232.0.0/16 -j DROP
-A SPAMDROP -s 132.240.0.0/16 -j DROP
-A SPAMDROP -s 134.18.0.0/16 -j DROP
-A SPAMDROP -s 134.22.0.0/16 -j DROP
-A SPAMDROP -s 134.23.0.0/16 -j DROP
-A SPAMDROP -s 134.33.0.0/16 -j DROP
-A SPAMDROP -s 134.73.0.0/16 -j DROP
-A SPAMDROP -s 134.127.0.0/16 -j DROP
-A SPAMDROP -s 134.172.0.0/16 -j DROP
-A SPAMDROP -s 134.209.0.0/16 -j DROP
-A SPAMDROP -s 136.228.0.0/16 -j DROP
-A SPAMDROP -s 136.230.0.0/16 -j DROP
-A SPAMDROP -s 137.76.0.0/16 -j DROP
-A SPAMDROP -s 137.105.0.0/16 -j DROP
-A SPAMDROP -s 137.171.0.0/16 -j DROP
-A SPAMDROP -s 138.36.148.0/22 -j DROP
-A SPAMDROP -s 138.43.0.0/16 -j DROP
-A SPAMDROP -s 138.128.224.0/19 -j DROP
-A SPAMDROP -s 138.200.0.0/16 -j DROP
-A SPAMDROP -s 138.216.0.0/16 -j DROP
-A SPAMDROP -s 138.249.0.0/16 -j DROP
-A SPAMDROP -s 139.47.0.0/16 -j DROP
-A SPAMDROP -s 139.167.0.0/16 -j DROP
-A SPAMDROP -s 139.188.0.0/16 -j DROP
-A SPAMDROP -s 140.143.128.0/17 -j DROP
-A SPAMDROP -s 140.167.0.0/16 -j DROP
-A SPAMDROP -s 140.204.0.0/16 -j DROP
-A SPAMDROP -s 141.101.132.0/24 -j DROP
-A SPAMDROP -s 141.101.201.0/24 -j DROP
-A SPAMDROP -s 141.136.16.0/24 -j DROP
-A SPAMDROP -s 141.136.22.0/24 -j DROP
-A SPAMDROP -s 141.136.27.0/24 -j DROP
-A SPAMDROP -s 141.178.0.0/16 -j DROP
-A SPAMDROP -s 141.253.0.0/16 -j DROP
-A SPAMDROP -s 142.4.160.0/19 -j DROP
-A SPAMDROP -s 143.49.0.0/16 -j DROP
-A SPAMDROP -s 143.64.0.0/16 -j DROP
-A SPAMDROP -s 143.135.0.0/16 -j DROP
-A SPAMDROP -s 143.189.0.0/16 -j DROP
-A SPAMDROP -s 144.207.0.0/16 -j DROP
-A SPAMDROP -s 145.231.0.0/16 -j DROP
-A SPAMDROP -s 146.3.0.0/16 -j DROP
-A SPAMDROP -s 147.7.0.0/16 -j DROP
-A SPAMDROP -s 147.119.0.0/16 -j DROP
-A SPAMDROP -s 148.154.0.0/16 -j DROP
-A SPAMDROP -s 148.178.0.0/16 -j DROP
-A SPAMDROP -s 148.185.0.0/16 -j DROP
-A SPAMDROP -s 148.248.0.0/16 -j DROP
-A SPAMDROP -s 149.109.0.0/16 -j DROP
-A SPAMDROP -s 149.114.0.0/16 -j DROP
-A SPAMDROP -s 149.118.0.0/16 -j DROP
-A SPAMDROP -s 149.143.64.0/18 -j DROP
-A SPAMDROP -s 150.10.0.0/16 -j DROP
-A SPAMDROP -s 150.22.128.0/17 -j DROP
-A SPAMDROP -s 150.25.0.0/16 -j DROP
-A SPAMDROP -s 150.40.0.0/16 -j DROP
-A SPAMDROP -s 150.107.106.0/23 -j DROP
-A SPAMDROP -s 150.107.220.0/22 -j DROP
-A SPAMDROP -s 150.121.0.0/16 -j DROP
-A SPAMDROP -s 150.126.0.0/16 -j DROP
-A SPAMDROP -s 150.129.136.0/22 -j DROP
-A SPAMDROP -s 150.129.212.0/22 -j DROP
-A SPAMDROP -s 150.129.228.0/22 -j DROP
-A SPAMDROP -s 150.141.0.0/16 -j DROP
-A SPAMDROP -s 150.230.0.0/16 -j DROP
-A SPAMDROP -s 150.242.36.0/22 -j DROP
-A SPAMDROP -s 150.242.100.0/22 -j DROP
-A SPAMDROP -s 150.242.120.0/22 -j DROP
-A SPAMDROP -s 150.242.144.0/22 -j DROP
-A SPAMDROP -s 151.123.0.0/16 -j DROP
-A SPAMDROP -s 151.192.0.0/16 -j DROP
-A SPAMDROP -s 151.212.0.0/16 -j DROP
-A SPAMDROP -s 151.237.184.0/22 -j DROP
-A SPAMDROP -s 152.136.0.0/16 -j DROP
-A SPAMDROP -s 152.147.0.0/16 -j DROP
-A SPAMDROP -s 153.14.0.0/16 -j DROP
-A SPAMDROP -s 153.93.0.0/16 -j DROP
-A SPAMDROP -s 155.40.0.0/16 -j DROP
-A SPAMDROP -s 155.66.0.0/16 -j DROP
-A SPAMDROP -s 155.73.0.0/16 -j DROP
-A SPAMDROP -s 155.108.0.0/16 -j DROP
-A SPAMDROP -s 155.204.0.0/16 -j DROP
-A SPAMDROP -s 155.249.0.0/16 -j DROP
-A SPAMDROP -s 157.115.0.0/16 -j DROP
-A SPAMDROP -s 157.162.0.0/16 -j DROP
-A SPAMDROP -s 157.186.0.0/16 -j DROP
-A SPAMDROP -s 157.195.0.0/16 -j DROP
-A SPAMDROP -s 157.231.0.0/16 -j DROP
-A SPAMDROP -s 157.232.0.0/16 -j DROP
-A SPAMDROP -s 158.54.0.0/16 -j DROP
-A SPAMDROP -s 158.58.0.0/17 -j DROP
-A SPAMDROP -s 158.90.0.0/17 -j DROP
-A SPAMDROP -s 159.85.0.0/16 -j DROP
-A SPAMDROP -s 159.100.0.0/18 -j DROP
-A SPAMDROP -s 159.111.0.0/16 -j DROP
-A SPAMDROP -s 159.135.0.0/16 -j DROP
-A SPAMDROP -s 159.151.0.0/16 -j DROP
-A SPAMDROP -s 159.219.0.0/16 -j DROP
-A SPAMDROP -s 159.223.0.0/16 -j DROP
-A SPAMDROP -s 159.229.0.0/16 -j DROP
-A SPAMDROP -s 160.14.0.0/16 -j DROP
-A SPAMDROP -s 160.21.0.0/16 -j DROP
-A SPAMDROP -s 160.180.0.0/16 -j DROP
-A SPAMDROP -s 160.181.0.0/16 -j DROP
-A SPAMDROP -s 160.200.0.0/16 -j DROP
-A SPAMDROP -s 160.222.0.0/16 -j DROP
-A SPAMDROP -s 160.235.0.0/16 -j DROP
-A SPAMDROP -s 160.240.0.0/16 -j DROP
-A SPAMDROP -s 160.255.0.0/16 -j DROP
-A SPAMDROP -s 161.59.0.0/16 -j DROP
-A SPAMDROP -s 161.66.0.0/16 -j DROP
-A SPAMDROP -s 161.71.0.0/16 -j DROP
-A SPAMDROP -s 161.189.0.0/16 -j DROP
-A SPAMDROP -s 161.232.0.0/16 -j DROP
-A SPAMDROP -s 162.211.236.0/22 -j DROP
-A SPAMDROP -s 162.252.238.0/23 -j DROP
-A SPAMDROP -s 163.47.19.0/24 -j DROP
-A SPAMDROP -s 163.50.0.0/16 -j DROP
-A SPAMDROP -s 163.53.247.0/24 -j DROP
-A SPAMDROP -s 163.58.0.0/16 -j DROP
-A SPAMDROP -s 163.59.0.0/16 -j DROP
-A SPAMDROP -s 163.182.0.0/16 -j DROP
-A SPAMDROP -s 163.227.128.0/21 -j DROP
-A SPAMDROP -s 163.254.0.0/16 -j DROP
-A SPAMDROP -s 164.6.0.0/16 -j DROP
-A SPAMDROP -s 164.60.0.0/16 -j DROP
-A SPAMDROP -s 164.137.0.0/16 -j DROP
-A SPAMDROP -s 165.102.0.0/16 -j DROP
-A SPAMDROP -s 165.192.0.0/16 -j DROP
-A SPAMDROP -s 165.205.0.0/16 -j DROP
-A SPAMDROP -s 165.209.0.0/16 -j DROP
-A SPAMDROP -s 167.74.0.0/18 -j DROP
-A SPAMDROP -s 167.87.0.0/16 -j DROP
-A SPAMDROP -s 167.97.0.0/16 -j DROP
-A SPAMDROP -s 167.103.0.0/16 -j DROP
-A SPAMDROP -s 167.162.0.0/16 -j DROP
-A SPAMDROP -s 167.175.0.0/16 -j DROP
-A SPAMDROP -s 167.224.0.0/19 -j DROP
-A SPAMDROP -s 168.90.208.0/20 -j DROP
-A SPAMDROP -s 168.90.240.0/20 -j DROP
-A SPAMDROP -s 168.129.0.0/16 -j DROP
-A SPAMDROP -s 170.67.0.0/16 -j DROP
-A SPAMDROP -s 170.113.0.0/16 -j DROP
-A SPAMDROP -s 170.114.0.0/16 -j DROP
-A SPAMDROP -s 170.120.0.0/16 -j DROP
-A SPAMDROP -s 170.179.0.0/16 -j DROP
-A SPAMDROP -s 171.22.0.0/16 -j DROP
-A SPAMDROP -s 171.25.0.0/17 -j DROP
-A SPAMDROP -s 171.26.0.0/16 -j DROP
-A SPAMDROP -s 172.81.128.0/21 -j DROP
-A SPAMDROP -s 172.103.40.0/21 -j DROP
-A SPAMDROP -s 172.103.64.0/18 -j DROP
-A SPAMDROP -s 173.228.160.0/19 -j DROP
-A SPAMDROP -s 173.246.160.0/19 -j DROP
-A SPAMDROP -s 175.103.64.0/18 -j DROP
-A SPAMDROP -s 176.47.0.0/16 -j DROP
-A SPAMDROP -s 176.61.136.0/22 -j DROP
-A SPAMDROP -s 176.61.136.0/21 -j DROP
-A SPAMDROP -s 176.65.128.0/17 -j DROP
-A SPAMDROP -s 176.97.116.0/22 -j DROP
-A SPAMDROP -s 176.97.152.0/22 -j DROP
-A SPAMDROP -s 177.36.16.0/20 -j DROP
-A SPAMDROP -s 177.74.160.0/20 -j DROP
-A SPAMDROP -s 178.216.48.0/21 -j DROP
-A SPAMDROP -s 179.61.200.0/23 -j DROP
-A SPAMDROP -s 180.178.192.0/18 -j DROP
-A SPAMDROP -s 180.236.0.0/14 -j DROP
-A SPAMDROP -s 181.118.32.0/19 -j DROP
-A SPAMDROP -s 184.169.64.0/19 -j DROP
-A SPAMDROP -s 185.2.32.0/24 -j DROP
-A SPAMDROP -s 185.3.132.0/22 -j DROP
-A SPAMDROP -s 185.11.140.0/24 -j DROP
-A SPAMDROP -s 185.11.143.0/24 -j DROP
-A SPAMDROP -s 185.35.136.0/22 -j DROP
-A SPAMDROP -s 185.44.77.0/24 -j DROP
-A SPAMDROP -s 185.44.78.0/23 -j DROP
-A SPAMDROP -s 185.46.84.0/22 -j DROP
-A SPAMDROP -s 185.50.250.0/24 -j DROP
-A SPAMDROP -s 185.50.251.0/24 -j DROP
-A SPAMDROP -s 185.68.156.0/22 -j DROP
-A SPAMDROP -s 185.72.68.0/22 -j DROP
-A SPAMDROP -s 185.75.56.0/22 -j DROP
-A SPAMDROP -s 185.93.187.0/24 -j DROP
-A SPAMDROP -s 185.106.94.0/24 -j DROP
-A SPAMDROP -s 185.130.52.0/22 -j DROP
-A SPAMDROP -s 186.1.128.0/19 -j DROP
-A SPAMDROP -s 186.96.96.0/19 -j DROP
-A SPAMDROP -s 186.148.160.0/19 -j DROP
-A SPAMDROP -s 186.195.224.0/20 -j DROP
-A SPAMDROP -s 188.72.96.0/24 -j DROP
-A SPAMDROP -s 188.72.126.0/24 -j DROP
-A SPAMDROP -s 188.72.127.0/24 -j DROP
-A SPAMDROP -s 188.239.128.0/18 -j DROP
-A SPAMDROP -s 188.247.135.0/24 -j DROP
-A SPAMDROP -s 188.247.230.0/24 -j DROP
-A SPAMDROP -s 190.2.208.0/21 -j DROP
-A SPAMDROP -s 190.9.48.0/21 -j DROP
-A SPAMDROP -s 190.13.80.0/21 -j DROP
-A SPAMDROP -s 191.101.54.0/23 -j DROP
-A SPAMDROP -s 192.5.103.0/24 -j DROP
-A SPAMDROP -s 192.12.131.0/24 -j DROP
-A SPAMDROP -s 192.26.25.0/24 -j DROP
-A SPAMDROP -s 192.31.212.0/23 -j DROP
-A SPAMDROP -s 192.40.29.0/24 -j DROP
-A SPAMDROP -s 192.43.153.0/24 -j DROP
-A SPAMDROP -s 192.43.154.0/23 -j DROP
-A SPAMDROP -s 192.43.156.0/22 -j DROP
-A SPAMDROP -s 192.43.160.0/24 -j DROP
-A SPAMDROP -s 192.43.175.0/24 -j DROP
-A SPAMDROP -s 192.43.176.0/21 -j DROP
-A SPAMDROP -s 192.43.184.0/24 -j DROP
-A SPAMDROP -s 192.54.39.0/24 -j DROP
-A SPAMDROP -s 192.54.73.0/24 -j DROP
-A SPAMDROP -s 192.54.110.0/24 -j DROP
-A SPAMDROP -s 192.67.16.0/24 -j DROP
-A SPAMDROP -s 192.67.160.0/22 -j DROP
-A SPAMDROP -s 192.84.243.0/24 -j DROP
-A SPAMDROP -s 192.86.85.0/24 -j DROP
-A SPAMDROP -s 192.88.74.0/24 -j DROP
-A SPAMDROP -s 192.100.142.0/24 -j DROP
-A SPAMDROP -s 192.101.44.0/24 -j DROP
-A SPAMDROP -s 192.101.181.0/24 -j DROP
-A SPAMDROP -s 192.101.200.0/21 -j DROP
-A SPAMDROP -s 192.101.240.0/21 -j DROP
-A SPAMDROP -s 192.101.248.0/23 -j DROP
-A SPAMDROP -s 192.125.0.0/17 -j DROP
-A SPAMDROP -s 192.133.3.0/24 -j DROP
-A SPAMDROP -s 192.152.0.0/24 -j DROP
-A SPAMDROP -s 192.152.194.0/24 -j DROP
-A SPAMDROP -s 192.154.11.0/24 -j DROP
-A SPAMDROP -s 192.158.51.0/24 -j DROP
-A SPAMDROP -s 192.160.44.0/24 -j DROP
-A SPAMDROP -s 192.171.64.0/19 -j DROP
-A SPAMDROP -s 192.189.25.0/24 -j DROP
-A SPAMDROP -s 192.190.49.0/24 -j DROP
-A SPAMDROP -s 192.190.97.0/24 -j DROP
-A SPAMDROP -s 192.195.150.0/24 -j DROP
-A SPAMDROP -s 192.197.87.0/24 -j DROP
-A SPAMDROP -s 192.203.252.0/24 -j DROP
-A SPAMDROP -s 192.206.114.0/24 -j DROP
-A SPAMDROP -s 192.219.120.0/21 -j DROP
-A SPAMDROP -s 192.219.128.0/18 -j DROP
-A SPAMDROP -s 192.219.192.0/20 -j DROP
-A SPAMDROP -s 192.219.208.0/21 -j DROP
-A SPAMDROP -s 192.225.96.0/20 -j DROP
-A SPAMDROP -s 192.226.16.0/20 -j DROP
-A SPAMDROP -s 192.229.32.0/19 -j DROP
-A SPAMDROP -s 192.231.66.0/24 -j DROP
-A SPAMDROP -s 192.234.189.0/24 -j DROP
-A SPAMDROP -s 192.245.101.0/24 -j DROP
-A SPAMDROP -s 193.0.129.0/24 -j DROP
-A SPAMDROP -s 193.9.158.0/24 -j DROP
-A SPAMDROP -s 193.25.48.0/20 -j DROP
-A SPAMDROP -s 193.26.64.0/19 -j DROP
-A SPAMDROP -s 193.104.41.0/24 -j DROP
-A SPAMDROP -s 193.107.16.0/22 -j DROP
-A SPAMDROP -s 193.138.244.0/22 -j DROP
-A SPAMDROP -s 193.139.0.0/16 -j DROP
-A SPAMDROP -s 193.150.120.0/24 -j DROP
-A SPAMDROP -s 193.164.11.0/24 -j DROP
-A SPAMDROP -s 193.177.64.0/18 -j DROP
-A SPAMDROP -s 193.189.116.0/23 -j DROP
-A SPAMDROP -s 193.222.50.0/24 -j DROP
-A SPAMDROP -s 193.243.0.0/17 -j DROP
-A SPAMDROP -s 194.0.177.0/24 -j DROP
-A SPAMDROP -s 194.1.152.0/24 -j DROP
-A SPAMDROP -s 194.29.185.0/24 -j DROP
-A SPAMDROP -s 194.38.0.0/18 -j DROP
-A SPAMDROP -s 194.50.116.0/24 -j DROP
-A SPAMDROP -s 194.110.160.0/22 -j DROP
-A SPAMDROP -s 195.20.141.0/24 -j DROP
-A SPAMDROP -s 195.88.190.0/23 -j DROP
-A SPAMDROP -s 195.182.57.0/24 -j DROP
-A SPAMDROP -s 195.190.13.0/24 -j DROP
-A SPAMDROP -s 195.191.56.0/23 -j DROP
-A SPAMDROP -s 195.191.102.0/23 -j DROP
-A SPAMDROP -s 195.225.176.0/22 -j DROP
-A SPAMDROP -s 196.1.109.0/24 -j DROP
-A SPAMDROP -s 196.42.128.0/17 -j DROP
-A SPAMDROP -s 196.44.112.0/20 -j DROP
-A SPAMDROP -s 196.63.0.0/16 -j DROP
-A SPAMDROP -s 196.188.0.0/14 -j DROP
-A SPAMDROP -s 196.193.0.0/16 -j DROP
-A SPAMDROP -s 196.247.0.0/16 -j DROP
-A SPAMDROP -s 197.154.0.0/16 -j DROP
-A SPAMDROP -s 198.13.0.0/20 -j DROP
-A SPAMDROP -s 198.14.128.0/19 -j DROP
-A SPAMDROP -s 198.14.160.0/19 -j DROP
-A SPAMDROP -s 198.20.16.0/20 -j DROP
-A SPAMDROP -s 198.23.32.0/20 -j DROP
-A SPAMDROP -s 198.44.192.0/20 -j DROP
-A SPAMDROP -s 198.45.32.0/20 -j DROP
-A SPAMDROP -s 198.45.64.0/19 -j DROP
-A SPAMDROP -s 198.56.64.0/18 -j DROP
-A SPAMDROP -s 198.57.64.0/20 -j DROP
-A SPAMDROP -s 198.62.70.0/24 -j DROP
-A SPAMDROP -s 198.62.76.0/24 -j DROP
-A SPAMDROP -s 198.96.224.0/20 -j DROP
-A SPAMDROP -s 198.99.117.0/24 -j DROP
-A SPAMDROP -s 198.102.222.0/24 -j DROP
-A SPAMDROP -s 198.148.212.0/24 -j DROP
-A SPAMDROP -s 198.151.16.0/20 -j DROP
-A SPAMDROP -s 198.151.64.0/18 -j DROP
-A SPAMDROP -s 198.151.152.0/22 -j DROP
-A SPAMDROP -s 198.160.205.0/24 -j DROP
-A SPAMDROP -s 198.169.201.0/24 -j DROP
-A SPAMDROP -s 198.177.175.0/24 -j DROP
-A SPAMDROP -s 198.177.176.0/22 -j DROP
-A SPAMDROP -s 198.177.180.0/24 -j DROP
-A SPAMDROP -s 198.177.214.0/24 -j DROP
-A SPAMDROP -s 198.178.64.0/19 -j DROP
-A SPAMDROP -s 198.179.22.0/24 -j DROP
-A SPAMDROP -s 198.181.32.0/20 -j DROP
-A SPAMDROP -s 198.181.64.0/19 -j DROP
-A SPAMDROP -s 198.181.96.0/20 -j DROP
-A SPAMDROP -s 198.183.32.0/19 -j DROP
-A SPAMDROP -s 198.184.193.0/24 -j DROP
-A SPAMDROP -s 198.184.208.0/24 -j DROP
-A SPAMDROP -s 198.186.25.0/24 -j DROP
-A SPAMDROP -s 198.186.208.0/24 -j DROP
-A SPAMDROP -s 198.187.64.0/18 -j DROP
-A SPAMDROP -s 198.187.192.0/24 -j DROP
-A SPAMDROP -s 198.190.173.0/24 -j DROP
-A SPAMDROP -s 198.199.212.0/24 -j DROP
-A SPAMDROP -s 198.202.237.0/24 -j DROP
-A SPAMDROP -s 198.204.0.0/21 -j DROP
-A SPAMDROP -s 198.212.132.0/24 -j DROP
-A SPAMDROP -s 199.5.152.0/23 -j DROP
-A SPAMDROP -s 199.5.229.0/24 -j DROP
-A SPAMDROP -s 199.26.96.0/19 -j DROP
-A SPAMDROP -s 199.26.137.0/24 -j DROP
-A SPAMDROP -s 199.26.207.0/24 -j DROP
-A SPAMDROP -s 199.26.251.0/24 -j DROP
-A SPAMDROP -s 199.33.222.0/24 -j DROP
-A SPAMDROP -s 199.34.128.0/18 -j DROP
-A SPAMDROP -s 199.46.32.0/19 -j DROP
-A SPAMDROP -s 199.58.248.0/21 -j DROP
-A SPAMDROP -s 199.60.102.0/24 -j DROP
-A SPAMDROP -s 199.71.56.0/21 -j DROP
-A SPAMDROP -s 199.71.192.0/20 -j DROP
-A SPAMDROP -s 199.84.55.0/24 -j DROP
-A SPAMDROP -s 199.84.56.0/22 -j DROP
-A SPAMDROP -s 199.84.60.0/24 -j DROP
-A SPAMDROP -s 199.84.64.0/19 -j DROP
-A SPAMDROP -s 199.87.208.0/21 -j DROP
-A SPAMDROP -s 199.88.32.0/20 -j DROP
-A SPAMDROP -s 199.88.48.0/22 -j DROP
-A SPAMDROP -s 199.89.16.0/20 -j DROP
-A SPAMDROP -s 199.89.198.0/24 -j DROP
-A SPAMDROP -s 199.120.163.0/24 -j DROP
-A SPAMDROP -s 199.165.32.0/19 -j DROP
-A SPAMDROP -s 199.166.200.0/22 -j DROP
-A SPAMDROP -s 199.184.82.0/24 -j DROP
-A SPAMDROP -s 199.185.192.0/20 -j DROP
-A SPAMDROP -s 199.196.192.0/19 -j DROP
-A SPAMDROP -s 199.198.160.0/20 -j DROP
-A SPAMDROP -s 199.198.176.0/21 -j DROP
-A SPAMDROP -s 199.198.184.0/23 -j DROP
-A SPAMDROP -s 199.198.188.0/22 -j DROP
-A SPAMDROP -s 199.200.64.0/19 -j DROP
-A SPAMDROP -s 199.212.96.0/20 -j DROP
-A SPAMDROP -s 199.223.0.0/20 -j DROP
-A SPAMDROP -s 199.230.64.0/19 -j DROP
-A SPAMDROP -s 199.230.96.0/21 -j DROP
-A SPAMDROP -s 199.233.85.0/24 -j DROP
-A SPAMDROP -s 199.233.96.0/24 -j DROP
-A SPAMDROP -s 199.245.138.0/24 -j DROP
-A SPAMDROP -s 199.246.137.0/24 -j DROP
-A SPAMDROP -s 199.246.213.0/24 -j DROP
-A SPAMDROP -s 199.246.215.0/24 -j DROP
-A SPAMDROP -s 199.248.64.0/18 -j DROP
-A SPAMDROP -s 199.249.64.0/19 -j DROP
-A SPAMDROP -s 199.253.32.0/20 -j DROP
-A SPAMDROP -s 199.253.48.0/21 -j DROP
-A SPAMDROP -s 199.253.224.0/20 -j DROP
-A SPAMDROP -s 199.254.32.0/20 -j DROP
-A SPAMDROP -s 200.3.128.0/20 -j DROP
-A SPAMDROP -s 200.22.0.0/16 -j DROP
-A SPAMDROP -s 201.169.0.0/16 -j DROP
-A SPAMDROP -s 201.182.0.0/16 -j DROP
-A SPAMDROP -s 202.0.192.0/18 -j DROP
-A SPAMDROP -s 202.20.32.0/19 -j DROP
-A SPAMDROP -s 202.21.64.0/19 -j DROP
-A SPAMDROP -s 202.27.96.0/23 -j DROP
-A SPAMDROP -s 202.27.98.0/24 -j DROP
-A SPAMDROP -s 202.27.99.0/24 -j DROP
-A SPAMDROP -s 202.27.100.0/22 -j DROP
-A SPAMDROP -s 202.27.120.0/22 -j DROP
-A SPAMDROP -s 202.27.161.0/24 -j DROP
-A SPAMDROP -s 202.27.162.0/23 -j DROP
-A SPAMDROP -s 202.27.164.0/22 -j DROP
-A SPAMDROP -s 202.27.168.0/24 -j DROP
-A SPAMDROP -s 202.39.112.0/20 -j DROP
-A SPAMDROP -s 202.40.32.0/19 -j DROP
-A SPAMDROP -s 202.40.64.0/18 -j DROP
-A SPAMDROP -s 202.61.108.0/24 -j DROP
-A SPAMDROP -s 202.68.0.0/18 -j DROP
-A SPAMDROP -s 202.80.152.0/21 -j DROP
-A SPAMDROP -s 202.148.32.0/20 -j DROP
-A SPAMDROP -s 202.148.176.0/20 -j DROP
-A SPAMDROP -s 202.183.0.0/19 -j DROP
-A SPAMDROP -s 202.189.80.0/20 -j DROP
-A SPAMDROP -s 203.0.116.0/22 -j DROP
-A SPAMDROP -s 203.2.200.0/22 -j DROP
-A SPAMDROP -s 203.9.0.0/19 -j DROP
-A SPAMDROP -s 203.31.88.0/23 -j DROP
-A SPAMDROP -s 203.34.70.0/23 -j DROP
-A SPAMDROP -s 203.34.71.0/24 -j DROP
-A SPAMDROP -s 203.86.252.0/22 -j DROP
-A SPAMDROP -s 203.148.80.0/22 -j DROP
-A SPAMDROP -s 203.149.92.0/22 -j DROP
-A SPAMDROP -s 203.169.0.0/22 -j DROP
-A SPAMDROP -s 203.189.112.0/22 -j DROP
-A SPAMDROP -s 203.191.64.0/18 -j DROP
-A SPAMDROP -s 204.19.38.0/23 -j DROP
-A SPAMDROP -s 204.44.32.0/20 -j DROP
-A SPAMDROP -s 204.44.192.0/20 -j DROP
-A SPAMDROP -s 204.44.224.0/20 -j DROP
-A SPAMDROP -s 204.48.16.0/20 -j DROP
-A SPAMDROP -s 204.52.255.0/24 -j DROP
-A SPAMDROP -s 204.57.16.0/20 -j DROP
-A SPAMDROP -s 204.75.147.0/24 -j DROP
-A SPAMDROP -s 204.75.228.0/24 -j DROP
-A SPAMDROP -s 204.80.198.0/24 -j DROP
-A SPAMDROP -s 204.86.16.0/20 -j DROP
-A SPAMDROP -s 204.87.199.0/24 -j DROP
-A SPAMDROP -s 204.89.224.0/24 -j DROP
-A SPAMDROP -s 204.106.128.0/18 -j DROP
-A SPAMDROP -s 204.106.192.0/19 -j DROP
-A SPAMDROP -s 204.107.208.0/24 -j DROP
-A SPAMDROP -s 204.126.244.0/23 -j DROP
-A SPAMDROP -s 204.128.151.0/24 -j DROP
-A SPAMDROP -s 204.128.180.0/24 -j DROP
-A SPAMDROP -s 204.130.167.0/24 -j DROP
-A SPAMDROP -s 204.147.240.0/20 -j DROP
-A SPAMDROP -s 204.155.128.0/20 -j DROP
-A SPAMDROP -s 204.187.155.0/24 -j DROP
-A SPAMDROP -s 204.187.156.0/22 -j DROP
-A SPAMDROP -s 204.187.160.0/19 -j DROP
-A SPAMDROP -s 204.187.192.0/19 -j DROP
-A SPAMDROP -s 204.187.224.0/20 -j DROP
-A SPAMDROP -s 204.187.240.0/21 -j DROP
-A SPAMDROP -s 204.187.248.0/22 -j DROP
-A SPAMDROP -s 204.187.252.0/23 -j DROP
-A SPAMDROP -s 204.187.254.0/24 -j DROP
-A SPAMDROP -s 204.194.64.0/21 -j DROP
-A SPAMDROP -s 204.194.184.0/21 -j DROP
-A SPAMDROP -s 204.225.159.0/24 -j DROP
-A SPAMDROP -s 204.225.210.0/24 -j DROP
-A SPAMDROP -s 204.238.137.0/24 -j DROP
-A SPAMDROP -s 204.238.170.0/24 -j DROP
-A SPAMDROP -s 204.238.183.0/24 -j DROP
-A SPAMDROP -s 205.137.0.0/20 -j DROP
-A SPAMDROP -s 205.142.104.0/22 -j DROP
-A SPAMDROP -s 205.144.0.0/20 -j DROP
-A SPAMDROP -s 205.144.176.0/20 -j DROP
-A SPAMDROP -s 205.148.128.0/18 -j DROP
-A SPAMDROP -s 205.151.128.0/19 -j DROP
-A SPAMDROP -s 205.159.45.0/24 -j DROP
-A SPAMDROP -s 205.159.174.0/24 -j DROP
-A SPAMDROP -s 205.159.180.0/24 -j DROP
-A SPAMDROP -s 205.166.77.0/24 -j DROP
-A SPAMDROP -s 205.166.84.0/24 -j DROP
-A SPAMDROP -s 205.166.130.0/24 -j DROP
-A SPAMDROP -s 205.166.168.0/24 -j DROP
-A SPAMDROP -s 205.166.211.0/24 -j DROP
-A SPAMDROP -s 205.172.176.0/22 -j DROP
-A SPAMDROP -s 205.172.244.0/22 -j DROP
-A SPAMDROP -s 205.175.160.0/19 -j DROP
-A SPAMDROP -s 205.189.71.0/24 -j DROP
-A SPAMDROP -s 205.189.72.0/23 -j DROP
-A SPAMDROP -s 205.203.0.0/19 -j DROP
-A SPAMDROP -s 205.203.224.0/19 -j DROP
-A SPAMDROP -s 205.207.134.0/24 -j DROP
-A SPAMDROP -s 205.210.107.0/24 -j DROP
-A SPAMDROP -s 205.210.139.0/24 -j DROP
-A SPAMDROP -s 205.210.171.0/24 -j DROP
-A SPAMDROP -s 205.210.172.0/22 -j DROP
-A SPAMDROP -s 205.214.96.0/19 -j DROP
-A SPAMDROP -s 205.214.128.0/19 -j DROP
-A SPAMDROP -s 205.233.224.0/20 -j DROP
-A SPAMDROP -s 205.236.185.0/24 -j DROP
-A SPAMDROP -s 205.236.189.0/24 -j DROP
-A SPAMDROP -s 205.253.0.0/16 -j DROP
-A SPAMDROP -s 206.51.29.0/24 -j DROP
-A SPAMDROP -s 206.81.0.0/19 -j DROP
-A SPAMDROP -s 206.127.192.0/19 -j DROP
-A SPAMDROP -s 206.130.188.0/24 -j DROP
-A SPAMDROP -s 206.143.128.0/17 -j DROP
-A SPAMDROP -s 206.189.0.0/16 -j DROP
-A SPAMDROP -s 206.195.224.0/19 -j DROP
-A SPAMDROP -s 206.197.28.0/24 -j DROP
-A SPAMDROP -s 206.197.29.0/24 -j DROP
-A SPAMDROP -s 206.197.77.0/24 -j DROP
-A SPAMDROP -s 206.197.165.0/24 -j DROP
-A SPAMDROP -s 206.203.64.0/18 -j DROP
-A SPAMDROP -s 206.209.80.0/20 -j DROP
-A SPAMDROP -s 206.224.160.0/19 -j DROP
-A SPAMDROP -s 206.226.0.0/19 -j DROP
-A SPAMDROP -s 206.226.32.0/19 -j DROP
-A SPAMDROP -s 206.227.64.0/18 -j DROP
-A SPAMDROP -s 207.22.192.0/18 -j DROP
-A SPAMDROP -s 207.32.128.0/19 -j DROP
-A SPAMDROP -s 207.45.224.0/20 -j DROP
-A SPAMDROP -s 207.110.64.0/18 -j DROP
-A SPAMDROP -s 207.110.96.0/19 -j DROP
-A SPAMDROP -s 207.110.128.0/18 -j DROP
-A SPAMDROP -s 207.183.192.0/19 -j DROP
-A SPAMDROP -s 207.226.192.0/20 -j DROP
-A SPAMDROP -s 207.230.96.0/19 -j DROP
-A SPAMDROP -s 207.234.0.0/17 -j DROP
-A SPAMDROP -s 207.254.128.0/21 -j DROP
-A SPAMDROP -s 208.81.136.0/21 -j DROP
-A SPAMDROP -s 208.90.0.0/21 -j DROP
-A SPAMDROP -s 208.117.80.0/20 -j DROP
-A SPAMDROP -s 209.51.32.0/20 -j DROP
-A SPAMDROP -s 209.54.160.0/19 -j DROP
-A SPAMDROP -s 209.66.128.0/19 -j DROP
-A SPAMDROP -s 209.95.192.0/19 -j DROP
-A SPAMDROP -s 209.97.128.0/18 -j DROP
-A SPAMDROP -s 209.145.0.0/19 -j DROP
-A SPAMDROP -s 209.182.64.0/19 -j DROP
-A SPAMDROP -s 209.198.176.0/20 -j DROP
-A SPAMDROP -s 210.79.128.0/18 -j DROP
-A SPAMDROP -s 210.87.64.0/18 -j DROP
-A SPAMDROP -s 213.5.104.0/21 -j DROP
-A SPAMDROP -s 216.59.128.0/18 -j DROP
-A SPAMDROP -s 220.154.0.0/16 -j DROP
-A SPAMDROP -s 221.132.192.0/18 -j DROP
-A SPAMDROP -s 223.0.0.0/15 -j DROP
-A SPAMDROP -s 223.25.252.0/22 -j DROP
-A SPAMDROP -s 223.168.0.0/16 -j DROP
-A SPAMDROP -s 223.169.0.0/16 -j DROP
-A SPAMDROP -s 223.170.0.0/16 -j DROP
-A SPAMDROP -s 223.171.0.0/16 -j DROP
-A SPAMDROP -s 223.172.0.0/16 -j DROP
-A SPAMDROP -s 223.173.0.0/16 -j DROP
-A SPAMDROP -s 223.201.0.0/16 -j DROP
-A SPAMDROP -s 223.254.0.0/16 -j DROP
-A SPAMEDROP -s 27.112.32.0/19 -j DROP
-A SPAMEDROP -s 37.9.53.0/24 -j DROP
-A SPAMEDROP -s 41.71.144.0/21 -j DROP
-A SPAMEDROP -s 41.71.171.0/24 -j DROP
-A SPAMEDROP -s 41.71.176.0/23 -j DROP
-A SPAMEDROP -s 41.71.178.0/24 -j DROP
-A SPAMEDROP -s 41.71.184.0/22 -j DROP
-A SPAMEDROP -s 41.71.188.0/23 -j DROP
-A SPAMEDROP -s 41.71.190.0/24 -j DROP
-A SPAMEDROP -s 41.71.216.0/23 -j DROP
-A SPAMEDROP -s 41.138.164.0/22 -j DROP
-A SPAMEDROP -s 41.138.168.0/23 -j DROP
-A SPAMEDROP -s 41.138.171.0/24 -j DROP
-A SPAMEDROP -s 41.138.172.0/23 -j DROP
-A SPAMEDROP -s 41.138.175.0/24 -j DROP
-A SPAMEDROP -s 41.138.176.0/20 -j DROP
-A SPAMEDROP -s 41.198.80.0/20 -j DROP
-A SPAMEDROP -s 41.198.224.0/20 -j DROP
-A SPAMEDROP -s 41.203.64.0/24 -j DROP
-A SPAMEDROP -s 41.203.67.0/24 -j DROP
-A SPAMEDROP -s 41.203.69.0/24 -j DROP
-A SPAMEDROP -s 42.140.0.0/17 -j DROP
-A SPAMEDROP -s 43.57.0.0/16 -j DROP
-A SPAMEDROP -s 43.181.0.0/16 -j DROP
-A SPAMEDROP -s 46.151.48.0/22 -j DROP
-A SPAMEDROP -s 46.151.52.0/22 -j DROP
-A SPAMEDROP -s 46.244.10.0/24 -j DROP
-A SPAMEDROP -s 58.2.0.0/17 -j DROP
-A SPAMEDROP -s 62.112.16.0/21 -j DROP
-A SPAMEDROP -s 80.114.192.0/18 -j DROP
-A SPAMEDROP -s 81.94.43.0/24 -j DROP
-A SPAMEDROP -s 85.239.149.0/24 -j DROP
-A SPAMEDROP -s 91.207.7.0/24 -j DROP
-A SPAMEDROP -s 91.240.128.0/24 -j DROP
-A SPAMEDROP -s 103.37.86.0/24 -j DROP
-A SPAMEDROP -s 103.204.176.0/24 -j DROP
-A SPAMEDROP -s 103.204.177.0/24 -j DROP
-A SPAMEDROP -s 103.235.174.0/23 -j DROP
-A SPAMEDROP -s 119.227.224.0/19 -j DROP
-A SPAMEDROP -s 120.46.0.0/15 -j DROP
-A SPAMEDROP -s 120.64.0.0/16 -j DROP
-A SPAMEDROP -s 120.67.0.0/16 -j DROP
-A SPAMEDROP -s 120.128.128.0/17 -j DROP
-A SPAMEDROP -s 120.128.192.0/18 -j DROP
-A SPAMEDROP -s 120.129.0.0/17 -j DROP
-A SPAMEDROP -s 120.129.128.0/17 -j DROP
-A SPAMEDROP -s 120.130.0.0/16 -j DROP
-A SPAMEDROP -s 120.130.128.0/18 -j DROP
-A SPAMEDROP -s 121.54.163.0/24 -j DROP
-A SPAMEDROP -s 153.85.0.0/16 -j DROP
-A SPAMEDROP -s 162.253.66.0/24 -j DROP
-A SPAMEDROP -s 177.47.126.0/24 -j DROP
-A SPAMEDROP -s 178.212.56.0/22 -j DROP
-A SPAMEDROP -s 181.118.32.0/24 -j DROP
-A SPAMEDROP -s 185.109.146.0/24 -j DROP
-A SPAMEDROP -s 185.109.147.0/24 -j DROP
-A SPAMEDROP -s 185.111.81.0/24 -j DROP
-A SPAMEDROP -s 185.128.65.0/24 -j DROP
-A SPAMEDROP -s 185.128.66.0/24 -j DROP
-A SPAMEDROP -s 188.247.232.0/24 -j DROP
-A SPAMEDROP -s 193.86.21.0/24 -j DROP
-A SPAMEDROP -s 195.214.249.0/24 -j DROP
-A SPAMEDROP -s 196.196.8.0/22 -j DROP
-A SPAMEDROP -s 198.89.232.0/24 -j DROP
-A SPAMEDROP -s 198.89.233.0/24 -j DROP
-A SPAMEDROP -s 199.15.232.0/21 -j DROP
-A SPAMEDROP -s 203.119.116.0/22 -j DROP
-A SPAMEDROP -s 204.8.87.0/24 -j DROP
-A SPAMEDROP -s 208.38.135.0/24 -j DROP
-A SPAMEDROP -s 210.57.0.0/19 -j DROP
-A SPAMEDROP -s 210.57.128.0/18 -j DROP
-A SPAMEDROP -s 210.57.192.0/20 -j DROP
-A SPAMEDROP -s 212.95.144.0/22 -j DROP
COMMIT
# Completed on Fri Feb 19 16:01:19 2016
# Generated by iptables-save v1.4.21 on Fri Feb 19 16:01:19 2016
*nat
:PREROUTING ACCEPT [22:2448]
:INPUT ACCEPT [8:585]
:OUTPUT ACCEPT [2:120]
:POSTROUTING ACCEPT [9:1260]
-A PREROUTING -d 186.5.36.227/32 -i ens32 -p tcp -m tcp --dport 25 -j DNAT --to-destination 192.168.107.203:25
-A PREROUTING -d 186.5.36.227/32 -i ens32 -p udp -m udp --dport 25 -j DNAT --to-destination 192.168.107.203:25
-A PREROUTING -d 186.5.36.227/32 -i ens32 -p tcp -m tcp --dport 465 -j DNAT --to-destination 192.168.107.203:465
-A PREROUTING -d 186.5.36.227/32 -i ens32 -p udp -m udp --dport 465 -j DNAT --to-destination 192.168.107.203:465
-A PREROUTING -d 186.5.36.227/32 -i ens32 -p tcp -m tcp --dport 110 -j DNAT --to-destination 192.168.107.203:110
-A PREROUTING -d 186.5.36.227/32 -i ens32 -p udp -m udp --dport 110 -j DNAT --to-destination 192.168.107.203:110
-A PREROUTING -d 186.5.36.227/32 -i ens32 -p tcp -m tcp --dport 995 -j DNAT --to-destination 192.168.107.203:995
-A PREROUTING -d 186.5.36.227/32 -i ens32 -p udp -m udp --dport 995 -j DNAT --to-destination 192.168.107.203:995
-A PREROUTING -d 186.5.36.227/32 -i ens32 -p tcp -m tcp --dport 143 -j DNAT --to-destination 192.168.107.203:143
-A PREROUTING -d 186.5.36.227/32 -i ens32 -p udp -m udp --dport 143 -j DNAT --to-destination 192.168.107.203:143
-A PREROUTING -d 186.5.36.227/32 -i ens32 -p tcp -m tcp --dport 993 -j DNAT --to-destination 192.168.107.203:993
-A PREROUTING -d 186.5.36.227/32 -i ens32 -p udp -m udp --dport 993 -j DNAT --to-destination 192.168.107.203:993
-A PREROUTING -d 186.5.36.227/32 -i ens32 -p tcp -m tcp --dport 443 -j DNAT --to-destination 192.168.107.203:443
-A PREROUTING -d 186.5.36.227/32 -i ens32 -p udp -m udp --dport 443 -j DNAT --to-destination 192.168.107.203:443
-A PREROUTING -i ens34 -p tcp -m tcp --dport 80 -j DNAT --to-destination 192.168.50.99:3128
-A PREROUTING -i ens32 -p tcp -m tcp --dport 80 -j REDIRECT --to-ports 3128
-A POSTROUTING -d 192.168.107.203/32 -o ens32 -p tcp -j SNAT --to-source 186.5.36.227
-A POSTROUTING -d 192.168.107.203/32 -o ens32 -p udp -j SNAT --to-source 186.5.36.227
-A POSTROUTING -d 192.168.107.203/32 -o ens32 -p tcp -j SNAT --to-source 186.5.36.227
-A POSTROUTING -d 192.168.107.203/32 -o ens32 -p udp -j SNAT --to-source 186.5.36.227
-A POSTROUTING -d 192.168.107.203/32 -o ens32 -p tcp -j SNAT --to-source 186.5.36.227
-A POSTROUTING -d 192.168.107.203/32 -o ens32 -p udp -j SNAT --to-source 186.5.36.227
-A POSTROUTING -d 192.168.107.203/32 -o ens32 -p tcp -j SNAT --to-source 186.5.36.227
-A POSTROUTING -d 192.168.107.203/32 -o ens32 -p udp -j SNAT --to-source 186.5.36.227
-A POSTROUTING -d 192.168.107.203/32 -o ens32 -p tcp -j SNAT --to-source 186.5.36.227
-A POSTROUTING -d 192.168.107.203/32 -o ens32 -p udp -j SNAT --to-source 186.5.36.227
-A POSTROUTING -d 192.168.107.203/32 -o ens32 -p tcp -j SNAT --to-source 186.5.36.227
-A POSTROUTING -d 192.168.107.203/32 -o ens32 -p udp -j SNAT --to-source 186.5.36.227
-A POSTROUTING -d 192.168.107.203/32 -o ens32 -p tcp -j SNAT --to-source 186.5.36.227
-A POSTROUTING -d 192.168.107.203/32 -o ens32 -p udp -j SNAT --to-source 186.5.36.227
-A POSTROUTING -o ens32 -j MASQUERADE
-A POSTROUTING -s 10.8.0.0/24 -o ens32 -j MASQUERADE
COMMIT
# Completed on Fri Feb 19 16:01:19 2016
# Generated by iptables-save v1.4.21 on Fri Feb 19 16:01:19 2016
*mangle
:PREROUTING ACCEPT [19937659:7370058455]
:INPUT ACCEPT [12056054:2264245957]
:FORWARD ACCEPT [7688616:5081202263]
:OUTPUT ACCEPT [32734607:3203683350]
:POSTROUTING ACCEPT [40420956:8284586232]
-A POSTROUTING -o virbr0 -p udp -m udp --dport 68 -j CHECKSUM --checksum-fill
COMMIT
# Completed on Fri Feb 19 16:01:19 2016
